force-app/main/default/objects/Candidate__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>This is describing the city field</description>
    <label>City</label>
    <length>18</length>
    <type>Text</type>
</CustomField>