force-app/main/default/objects/Candidate__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>This field is describing the country</description>
    <label>Country</label>
    <length>18</length>
    <type>Text</type>
</CustomField>