force-app/main/default/objects/Candidate__c/fields/Current_Employer__c.field-meta.xml
<CustomField>
    <fullName>Current_Employer__c</fullName>
    <description>This field is  describing the current Employer</description>
    <label>Current Employer</label>
    <length>30</length>
    <type>Text</type>
</CustomField>