force-app/main/default/objects/Candidate__c/fields/Currently_Employeed__c.field-meta.xml
<CustomField>
    <fullName>Currently_Employeed__c</fullName>
    <label>Currently Employeed</label>
    <length>30</length>
    <type>Text</type>
</CustomField>